fixed map issues on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -116,7 +116,7 @@
     gap: 30px;
     padding: 10px;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 
 #project_start #project_main .arrowBtn {
@@ -281,6 +281,7 @@
     font-family: var(--main-font);
     border-radius: 1rem;
 }
+
 .accountPages .blackbox form input::placeholder {
     color: lightslategray;
 }
@@ -345,6 +346,10 @@
         border-radius: 0px;
     }
 
+    #project_start #game_mainBtn {
+        height: 40%;
+    }
+
     .blackbox h1 {
         font-size: 35px;
     }
@@ -354,32 +359,7 @@
         max-width: 250px;
     }
 
-    @media (max-width: 480px) {
-        .accountPages .blackbox {
-            justify-content: center;
-            
-            width: 100%;
-            height: 100%;
-            min-width: 0px;
-            border-radius: 0px;
-        }
-    
-        #project_start #game_mainBtn{
-            height: 40%;
-            margin-top: 60%;
-        }
-    
-        .blackbox h1 {
-            font-size: 35px;
-        }
-    
-        .accountPages .blackbox form button {
-            width: 80%;
-            max-width: 250px;
-        }
-    
-        #project_start .game_option{
-            display: none;
-        }
+    #project_start .game_option {
+        display: none;
     }
 }
